fixed bug: -text would not render properly, a letter in the string would be printed twice at a time. -the text would not wrap to the next line.

--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -21,8 +21,8 @@
 .inner-banner-container{
     display: flex;
     column-gap: 10px;
-    flex-wrap: nowrap;
     background-color: #FEBE10;
+
 }
 
 /*used to prevent the resizing of the individual cells of the flexbox*/
